--- a/assets/admin/css/leaflet.css
+++ b/assets/admin/css/leaflet.css
@@ -25,10 +25,6 @@
 	        user-select: none;
 	  -webkit-user-drag: none;
 	}
-/* Prevents IE11 from highlighting tiles in blue */
-.leaflet-tile::selection {
-	background: transparent;
-}
 /* Safari renders non-retina tile on retina better with this, but Chrome is worse */
 .leaflet-safari .leaflet-tile {
 	image-rendering: -webkit-optimize-contrast;
@@ -151,7 +147,7 @@
 	float: right;
 	}
 .leaflet-top .leaflet-control {
-	margin-top: 10px;
+	margin-top: 115px;
 	}
 .leaflet-bottom .leaflet-control {
 	margin-bottom: 10px;
@@ -161,6 +157,7 @@
 	}
 .leaflet-right .leaflet-control {
 	margin-right: 10px;
+	margin-top: 10px;
 	}
 
 
@@ -241,8 +238,7 @@
 
 .leaflet-marker-icon.leaflet-interactive,
 .leaflet-image-layer.leaflet-interactive,
-.leaflet-pane > svg path.leaflet-interactive,
-svg.leaflet-image-layer.leaflet-interactive path {
+.leaflet-pane > svg path.leaflet-interactive {
 	pointer-events: visiblePainted; /* IE 9-10 doesn't have auto */
 	pointer-events: auto;
 	}
@@ -291,6 +287,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 .leaflet-bar a,
 .leaflet-control-layers-toggle {
+	
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	display: block;
@@ -333,6 +330,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-control-zoom-out {
 	font: bold 18px 'Lucida Console', Monaco, monospace;
 	text-indent: 1px;
+	
 	}
 
 .leaflet-touch .leaflet-control-zoom-in, .leaflet-touch .leaflet-control-zoom-out  {
@@ -348,17 +346,18 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	border-radius: 5px;
 	}
 .leaflet-control-layers-toggle {
-	background-image: url(images/layers.png);
-	width: 36px;
-	height: 36px;
+	background-image: url('satelit.png');
+	border-radius: 10px;
+	/* width: 36px;
+	height: 36px; */
 	}
 .leaflet-retina .leaflet-control-layers-toggle {
 	background-image: url(images/layers-2x.png);
 	background-size: 26px 26px;
 	}
 .leaflet-touch .leaflet-control-layers-toggle {
-	width: 44px;
-	height: 44px;
+	width: 70px;
+	height: 70px;
 	}
 .leaflet-control-layers .leaflet-control-layers-list,
 .leaflet-control-layers-expanded .leaflet-control-layers-toggle {
@@ -394,7 +393,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-	background-image: url(images/marker-icon.png);
+	background-image: url(./location_pin_red.png);
 	}
 
 
@@ -456,7 +455,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 .leaflet-touch .leaflet-control-layers,
 .leaflet-touch .leaflet-bar {
-	border: 2px solid rgba(0,0,0,0.2);
+	/* border: 2px solid rgba(0,0,0,0.2); */
 	background-clip: padding-box;
 	}
 
@@ -532,7 +531,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 
 .leaflet-oldie .leaflet-popup-content-wrapper {
-	-ms-zoom: 1;
+	zoom: 1;
 	}
 .leaflet-oldie .leaflet-popup-tip {
 	width: 24px;
@@ -637,4 +636,23 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	left: 0;
 	margin-left: -12px;
 	border-right-color: #fff;
+	}
+
+
+
+
+
+	@media only screen and (max-width: 1224px) {
+
+
+		
+
+		.leaflet-touch .leaflet-control-layers-toggle {
+			background-image: url('satelit-mobile.png');
+			background-size: 40px 40px;
+			border-radius: 10px;
+			width: 43px;
+			height: 43px;
+		}
+
 	}
