--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -549,6 +549,7 @@ body #navigation ul ul {
 #navigation.style-1 .current {
   background-color: transparent;
   color: #66676b;
+	
 }
 #navigation.style-1 {
   margin-top: 1px;
@@ -560,7 +561,7 @@ body #navigation ul ul {
   transition: all 0.25s;
 }
 #navigation.style-1 ul li a {
-  color: #444;
+  color: white;
   cursor: pointer;
 }
 body .user-menu ul li a:hover,
