--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -1888,54 +1888,76 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Contact
+# Contact Section
 --------------------------------------------------------------*/
-.contact .info-box {
-  color: #444444;
-  text-align: center;
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 20px 0 30px 0;
+.contact .map {
+  margin-bottom: 40px;
 }
 
-.contact .info-box i {
-  font-size: 32px;
-  color: #e96b56;
-  border-radius: 50%;
-  padding: 8px;
-  border: 2px dotted #fef5f4;
+.contact .map iframe {
+  border: 0;
+  width: 100%;
+  height: 400px;
 }
 
-.contact .info-box h3 {
-  font-size: 20px;
-  color: #777777;
-  font-weight: 700;
-  margin: 10px 0;
+.contact .info {
+  padding: 40px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
-.contact .info-box p {
+.contact .info h3 {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.contact .info p {
+  color: #8f9fae;
+  margin-bottom: 30px;
+  font-size: 15px;
+}
+
+.contact .info-item+.info-item {
+  padding-top: 20px;
+  margin-top: 20px;
+  border-top: 1px solid rgba(#8f9fae, 0.15);
+}
+
+.contact .info-item i {
+  font-size: 24px;
+  color: #0ea2bd;
+  transition: all 0.3s ease-in-out;
+  margin-right: 20px;
+}
+
+.contact .info-item h4 {
   padding: 0;
-  line-height: 24px;
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color: #485664;
+}
+
+.contact .info-item p {
+  padding: 0;
   margin-bottom: 0;
+  font-size: 14px;
+  color: #8f9fae;
 }
 
 .contact .php-email-form {
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 30px;
+  width: 100%;
+  background: #ffffff;
 }
 
-.contact .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
+.contact .php-email-form .form-group {
+  padding-bottom: 8px;
 }
 
 .contact .php-email-form .error-message {
   display: none;
-  color: #fff;
-  background: #ed3c0d;
+  color: #ffffff;
+  background: #df1529;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1947,8 +1969,8 @@ section {
 
 .contact .php-email-form .sent-message {
   display: none;
-  color: #fff;
-  background: #18d26e;
+  color: #ffffff;
+  background: #059652;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1956,7 +1978,7 @@ section {
 
 .contact .php-email-form .loading {
   display: none;
-  background: #fff;
+  background: #ffffff;
   text-align: center;
   padding: 15px;
 }
@@ -1968,43 +1990,48 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
+  border: 3px solid #059652;
+  border-top-color: #ffffff;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input,
+.contact .php-email-form input[type=text],
+.contact .php-email-form input[type=email],
 .contact .php-email-form textarea {
-  border-radius: 0;
+  border-radius: 0px;
   box-shadow: none;
   font-size: 14px;
 }
 
-.contact .php-email-form input:focus,
+.contact .php-email-form input[type=text]:focus,
+.contact .php-email-form input[type=email]:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #e96b56;
+  border-color: var(--color-secondary-light);
 }
 
-.contact .php-email-form input {
+.contact .php-email-form input[type=text],
+.contact .php-email-form input[type=email] {
+  height: 48px;
   padding: 10px 15px;
 }
 
 .contact .php-email-form textarea {
-  padding: 12px 15px;
+  padding: 10px 12px;
+  height: 290px;
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #e96b56;
+  background: #0ea2bd;
   border: 0;
-  border-radius: 50px;
-  padding: 10px 24px;
-  color: #fff;
+  padding: 13px 50px;
+  color: #ffffff;
   transition: 0.4s;
+  border-radius: 0;
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #e6573f;
+  background: rgba(14, 162, 189, 0.85);
 }
 
 @-webkit-keyframes animate-loading {
@@ -2026,7 +2053,6 @@ section {
     transform: rotate(360deg);
   }
 }
-
 /*--------------------------------------------------------------
 # Blog
 --------------------------------------------------------------*/
