--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -1018,7 +1018,7 @@ h6 {
 
 #topbar .contact-info i {
   font-style: normal;
-  color: #448cff;
+  color: #fff;
 }
 
 #topbar .contact-info i a,
@@ -1116,7 +1116,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 10px 30px;
+  padding: 10px 0 10px 15px;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   color: rgb(39, 39, 39);
