--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -1363,18 +1363,18 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 86vh;
+  height: 56vh;
   background-color: #fff;
   overflow: hidden;
   padding: 0;
-  margin-bottom: 115px;
+  margin-bottom: 40px;
   position: relative;
   z-index: 1;
 }
 
 #hero .carousel-item {
   width: 100%;
-  height: 81.5vh;
+  height: 51.5vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1508,10 +1508,10 @@ h6 {
   text-decoration: none;
 }
 
-@media (max-height: 768px),
+/* @media (max-height: 768px),
 (max-width: 1200px) {
   #hero {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
   }
 
   #hero .carousel-container {
@@ -1521,7 +1521,7 @@ h6 {
   #hero .carousel-indicators li {
     margin-bottom: 0;
   }
-}
+} */
 
 @media (max-width: 768px) {
   #hero {
@@ -1603,7 +1603,7 @@ section {
 
 .section-title {
   text-align: center;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .section-title h2 {
@@ -1677,7 +1677,7 @@ section {
 }
 
 .constructions .card-item .card-bg {
-  min-height: 300px;
+  min-height: 260px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
