--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -1547,8 +1547,12 @@ h6 {
 /*--------------------------------------------------------------
 # Featured Services Section
 --------------------------------------------------------------*/
+.featured-services .service-item-upper {
+  padding: 30px 30px 0 30px;
+  
+}
 .featured-services .service-item {
-  padding: 30px;
+  
   transition: all ease-in-out 0.4s;
   background: #ffffff;
   height: 100%;
@@ -1584,10 +1588,17 @@ h6 {
 .featured-services .service-item:hover {
   transform: translateY(-10px);
   box-shadow: 0px 0 60px 0 rgba(72, 86, 100, 0.1);
+	/* opacity: 0.5; */
 }
 
 .featured-services .service-item:hover h4 a {
   color: #0ea2bd;
+}
+.featured-services .service-item:hover p {
+  background-color: #53535349;
+	color: #fff;
+	transition: ease-in-out 0.3s;
+	
 }
 
 /*--------------------------------------------------------------
@@ -1664,6 +1675,12 @@ section {
   padding-right: 10px;
   color: #6e6e6e;
   content: "/";
+}
+
+
+.logo_polda img:hover{
+
+	opacity: 0.5;
 }
 
 /*--------------------------------------------------------------
