--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -1047,6 +1047,23 @@ h6 {
   color: #EFCA62;
 }
 
+.list-link li button{
+	color: #073888;
+	background-color: white;
+	padding: 20px;
+	width: 100%;
+}
+.list-link ul{
+	
+  padding-left: 10px !important;
+	padding-right: 10px !important;
+  
+  list-style: none;
+  
+	width: 100%;
+}
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -1472,11 +1489,11 @@ h6 {
   background: #448cff;
   overflow: hidden;
   border: 0;
-	top: 50;
+	top: 20;
   width: 12px;
   height: 12px;
   border-radius: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   opacity: 0.2;
 }
 
@@ -1490,7 +1507,7 @@ h6 {
   font-size: 14px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 12px 32px;
+  padding: 12px 12px;
   border-radius: 50px;
   transition: 0.5s;
   line-height: 1;
@@ -1610,6 +1627,7 @@ section {
 
 .section-bg {
   background-color: white;
+  
 }
 
 .section-title {
