--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -2270,6 +2270,11 @@ section {
 	opacity: 0.5;
 }
 
+.logo_polda .nama_polda{
+  color: grey;
+  font-size: 13px;
+}
+
 /*--------------------------------------------------------------
 # Blog
 --------------------------------------------------------------*/
