--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -159,15 +159,15 @@ h6 {
 
 /* icon
 ================================================ */
-.twitter:before,
+
 .wordpress:before,
-.facebook:before,
+
 .linkedin:before,
 .steam:before,
 .tumblr:before,
 .github:before,
 .delicious:before,
-.instagram:before,
+
 .xing:before,
 .amazon:before,
 .dropbox:before,
@@ -182,7 +182,7 @@ h6 {
 .vimeo:before,
 .spotify:before,
 .rss:before,
-.youtube:before,
+
 .blogger:before,
 .appstore:before,
 .digg:before,
@@ -195,6 +195,62 @@ h6 {
   font-size: 16px;
   line-height: 16px;
   color: #a0a0a0;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  position: absolute;
+  z-index: 20;
+  transform: scale(0.9);
+}
+.instagram:before{
+  font-family: fontello;
+  font-size: 16px;
+  line-height: 16px;
+  color: #eb34d5;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  position: absolute;
+  z-index: 20;
+  transform: scale(0.9);
+}
+.youtube:before{
+  font-family: fontello;
+  font-size: 16px;
+  line-height: 16px;
+  color: #bf2f29;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  position: absolute;
+  z-index: 20;
+  transform: scale(0.9);
+}
+.twitter:before{
+  font-family: fontello;
+  font-size: 16px;
+  line-height: 16px;
+  color: #3bc1ed;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  position: absolute;
+  z-index: 20;
+  transform: scale(0.9);
+}
+.facebook:before{
+  font-family: fontello;
+  font-size: 16px;
+  line-height: 16px;
+  color: #4a6d9d;
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
   -o-transition: all 0.15s ease-in-out;
@@ -1556,7 +1612,7 @@ h6 {
   }
 
   #hero .carousel-item {
-    height: 90vh;
+    height: 190vh;
   }
 }
 
@@ -1744,6 +1800,20 @@ section {
 .constructions .card-item p {
   color: #485664;
   margin: 0;
+}
+.constructions .card-item .card-bg{
+  background-color: #083174;
+}
+
+.constructions .card-item:hover{
+  background-color: rgba(186, 186, 186, 0.202);
+}
+.constructions .card-item .card-bg:hover{
+  background-color: rgb(0, 10, 123);
+  opacity: 0.75;
+}
+.constructions .card-item .card-body .card-title:hover{
+  color: #083174;
 }
 
 /*--------------------------------------------------------------
