--- a/assets/fe/css/style.css
+++ b/assets/fe/css/style.css
@@ -1667,6 +1667,7 @@ h6 {
 }
 
 .featured-services .service-item p {
+  background-color: #53535381;
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
