--- a/assets/login/css/style.css
+++ b/assets/login/css/style.css
@@ -574,6 +574,19 @@ body {
     width: 100%;
     overflow: hidden;
     padding: 30px 0;
+    background-color: hsl(153, 52%, 40%);
+      background-image: radial-gradient(650px circle at 0% 0%,
+          hsl(128, 71%, 57%) 15%,
+          hsl(160, 54%, 46%) 35%,
+          hsl(147, 47%, 51%) 75%,
+          hsl(155, 68%, 43%) 80%,
+          transparent 100%),
+        radial-gradient(1250px circle at 100% 100%,
+          hsl(64, 51%, 47%) 15%,
+          hsl(86, 61%, 47%) 35%,
+          hsl(59, 53%, 49%) 75%,
+          hsl(69, 52%, 55%) 80%,
+          transparent 100%);
 }
 
 .login-2 .login-2-inner:before {
@@ -583,7 +596,7 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    background: url(../../bg-korlantas.png) top right repeat;
+    /* background: url(../../bg-korlantas.png) top right repeat; */
     background-position: center center;
     background-size: cover;
     border-radius: 0 30px 30px 0;
@@ -601,7 +614,7 @@ body {
     /* background: url(../../img-sidelogin.png) top left repeat; */
     background-size: cover;
     position: relative;
-    max-width: 800px;
+    max-width: 600px;
 }
 
 .login-2 .form-section {
@@ -827,7 +840,7 @@ body {
     transform-origin: bottom center;
     transition: transform 0.4s linear, transform 0.4s linear;
     z-index: -1;
-    background: #0dcaf0;
+    background: #f8c92c;
 }
 
 .login-2 .btn-info:after {
